--- a/FinPlan.Web/Components/Shared/RetirementInputWizard.razor
+++ b/FinPlan.Web/Components/Shared/RetirementInputWizard.razor
@@ -939,6 +939,7 @@ else if (wizardStep == 3)
                                 </ul>
                             </div>
                         }
+                        else if (wizardStep == 5)
                         {
 
                             <label class="form-label mb-3">Withdrawal Strategy</label>
