--- a/FinPlan.Web/Components/Shared/RetirementInputWizard.razor
+++ b/FinPlan.Web/Components/Shared/RetirementInputWizard.razor
@@ -1180,10 +1180,10 @@ else if (wizardStep == 3)
                                                     <span class="input-group-text">years</span>
                                                 </div>
 
-                                                <div class="text-center p-2 mt-2" style="background-color: #f0f7ff; border-radius: 6px;">
+                                          @*       <div class="text-center p-2 mt-2" style="background-color: #f0f7ff; border-radius: 6px;">
                                                     <div>Years until retirement:</div>
                                                     <strong class="fs-4 text-primary">@(Model!.RetirementAgeYou - Model!.CurrentAgeYou)</strong>
-                                                </div>
+                                                </div> *@
                                             </div>
                                         </div>
                                     </div>
